--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libhildon (2.2.25-1+0m7) unstable; urgency=medium
+
+  * enable git builds
+
+ -- Ivan J. <parazyd@dyne.org>  Tue, 12 Sep 2017 23:00:00 +0200
+
 libhildon (2.2.25-1) unstable; urgency=low
 
   * PannableArea: always hide horizontal scrollbar if HILDON_MOVEMENT_MODE_VERT is set.
