--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libhildon (2.2.25-3) unstable; urgency=medium
+
+  * Update debian compat level to 10.
+  * Migrate to dh build sequencer.
+  * Add multiarch support.
+
+ -- Arthur Demchenkov <spinal.by@gmail.com>  Sun, 14 Apr 2019 09:30:08 +0300
+
 libhildon (2.2.25-2) unstable; urgency=medium
 
   * enable git builds
