Fix build with upstream Gtk+.
This commit disables the portions of code using the Maemo Gtk+ API when building
against stock Gtk+. Not all features will be available, but programs not
using the Maemo Gtk+ API should mostly run.

Furthermore, placeholder no-op implementations of the following Maemo
Gtk+ API function will be provided in such case, precisely:
* hildon_gtk_entry_set_placeholder_text
* hildon_gtk_text_view_set_placeholder_text

--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Building with stock GTK+
 ------------------------
 
 To build with stock GTK+ pass --with-maemo-gtk=no to the configure script.
-
+Note that in such case not all features will be supported.
