--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libhildon (2.2.26-1) unstable; urgency=medium
+
+  * Fix build with upstream Gtk+.
+  * Add dummy placeholders for some Maemo Gtk+ API functions if building with
+    upstream Gtk+.
+
+ -- Marcin Mielniczuk <marmistrz.dev@zoho.eu>  Mon, 13 Jan 2020 21:39:04 +0100
+
 libhildon (2.2.25-3) unstable; urgency=medium
 
   * Update debian compat level to 10.
