--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libhildon (2.2.27-1) unstable; urgency=medium
+
+  * configure updates for gtk-doc
+
+ -- Merlijn Wajer <merlijn@wizzup.org>  Sun, 19 Jan 2020 00:26:40 +0100
+
 libhildon (2.2.26.1-1) unstable; urgency=medium
 
   * Fix a regression introduced in 2.2.26.
