--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libhildon (2.2.27-2) unstable; urgency=medium
+
+  * configure updates for gtk-doc, revert regression
+
+ -- Merlijn Wajer <merlijn@wizzup.org>  Sun, 19 Jan 2020 11:41:56 +0100
+
 libhildon (2.2.27-1) unstable; urgency=medium
 
   * configure updates for gtk-doc
