--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libhildon (2.2.26.1-1) unstable; urgency=medium
+
+  * Fix a regression introduced in 2.2.26.
+
+ -- Marcin Mielniczuk <marmistrz.dev@zoho.eu>  Wed, 22 Jan 2020 09:43:35 +0100
+
 libhildon (2.2.26-1) unstable; urgency=medium
 
   * Fix build with upstream Gtk+.
