--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libhildon (2.2.29) unstable; urgency=medium
+
+  * HildonTouchSelectorEntry: Fix smart_search segfault
+
+ -- Ivaylo Dimitrov <ivo.g.dimitrov.75@gmail.com>  Sun, 20 Mar 2022 08:01:45 +0200
+
 libhildon (2.2.28) unstable; urgency=medium
 
   * Port to Debian Buster
